0.0.16  xx-xxx-200x
  o Fix compilation on Mac OS X 10.3 (Panther).
  o GETCONF RelayBandwidthRate and RelayBandwidthBurst properly on Tor >=
    0.2.0.1-alpha. Previously, we were SETCONFing RelayBandwidthFoo when
    appropriate, but always GETCONFing BandwidthFoo. Fixes Ticket #298.
  o Fix some dumb logic in determing whether the Windows we're running on
    supports Window transparency.
  o Use the correct icon for the "Close Stream" context menu action in the
    circuit and stream list widget.
  o Update the default bandwidth rate and burst rate to 5MB and 10MB,
    respectively, to match Tor's defaults.
  o Modified the Mac OS X bundle installer to set Vidalia to start
    automatically on login for the user that installed the bundle.
  o Added an Arabic translation from Ahmad Gharbeia.
  o Updated Finnish, German, Simplified Chinese, and Traditional Chinese
    translations. 


0.0.15  24-Oct-2007
  o Add a new 'Network' settings page to the config dialog that lets users
    configure an HTTP/HTTPS proxy, specify allowed ports if they are behind a
    restrictive firewall or proxy, and set up bridges and tunneled dir conns.
  o Add a 'Help Censored Users Connect to the Tor Network' option to the
    'Server' settings page to help users set up their Tor as a brigde relay.
    This option is only available for those running Tor 0.2.0.8-alpha or
    newer.
  o Stop hardcoding a font size of 10 in many places. This made the fonts on
    Mac OS X look non-standard and inconsistent.
  o Restructure the code that manages GETCONFing values from Tor and then
    later SETCONFing any changed values to make it easier to add more pages
    like the 'Network' and 'Server' settings pages in the future.
  o If we prompt the user to enter a control password and they enter one,
    don't keep trying to use our randomly generated password.
  o Fix a bug in the network map that would cause the user to sometimes be